# XEmuRun

./: CMakeLists.txt  INSTALL.md  LICENSE  README.md  USAGE.md  build.sh  create_icons.sh  quick_fix.sh
flatpak/: io.github.xemurun.json  publish_to_flathub.sh
flatpak/.flatpak-builder/checksums/: x86_64-io.github.xemurun.json
flatpak/.flatpak-builder/git/https_github.com_open-source-parsers_jsoncpp.git/: FETCH_HEAD  config
flatpak/.flatpak-builder/git/https_github.com_open-source-parsers_jsoncpp.git/objects/pack/: pack-c8d628b87848798abd0c2038cd80ce36b9305634.idx  pack-c8d628b87848798abd0c2038cd80ce36b9305634.pack  pack-c8d628b87848798abd0c2038cd80ce36b9305634.rev
flatpak/metadata/: io.github.xemurun.desktop  io.github.xemurun.metainfo.xml
src/: main.cpp
src/config/: config.cpp  config.h  config_manager.cpp  config_manager.h
src/emulators/: base_emulator.cpp  base_emulator.h  emulator_interface.h  linux_emulator.cpp  linux_emulator.h  playstation_emulator.cpp  playstation_emulator.h  windows_emulator.cpp  windows_emulator.h  xbox_emulator.cpp  xbox_emulator.h
src/gui/: controller_mapping.cpp  controller_mapping.h  game_library.cpp  game_library.h  launcher_gui.cpp  launcher_gui.h  launcher_main.cpp  main_gui.cpp  packager_gui.cpp  packager_gui.h
src/launcher/: launcher.cpp  launcher.h
src/package/: package.cpp  package.h
src/packager/: main.cpp  packager.cpp  packager.h
src/utils/: archive.cpp  archive.h
